--- a/pages/index.njk
+++ b/pages/index.njk
@@ -2,5 +2,5 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-<h1>This is the index page</h1>
+<h1>This is the index page for Picky</h1>
 {% endblock %}
