--- a/pages/index.njk
+++ b/pages/index.njk
@@ -2,5 +2,10 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-<h1>This is the index page for Picky</h1>
+
+<div class="index">
+<h1>Welcome to Picky</h1>
+</div>
+
+
 {% endblock %}
