Adding in questions

--- a/pages/index.njk
+++ b/pages/index.njk
@@ -3,8 +3,22 @@
 
 {% block content %}
 
-<div class="index">
-<h1>Welcome to Picky</h1>
+<div class="questions">
+    <div class="question" id="question1">
+        <h2>Question 1</h2>
+        <button data-value="0">Answer 1</button>
+        <button data-value="1">Answer 2</button>
+    </div>
+    <div class="question" id="question2">
+        <h2>Question 2</h2>
+        <button data-value="2">Answer 1</button>
+        <button data-value="4">Answer 2</button>
+    </div>
+    <div class="question" id="question3">
+        <h2>Question 3</h2>
+        <button data-value="8">Answer 1</button>
+        <button data-value="16">Answer 2</button>
+    </div>
 </div>
 
 
