--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,1 +1,10 @@
+ .questions{
+    .question{
+        display: none;
+   
+        &#question1{
+            display: block;
+        }
+    }
+ }
  
