--- a/templates/partials/footer.njk
+++ b/templates/partials/footer.njk
@@ -1,4 +1,12 @@
 <!-- footer.njk -->
-<footer>
-    
-</footer>
+
+<div class="col-4 icon">
+    <p>Home</p>
+</div>
+<div class="col-4 icon">
+    <p>Previous Orders</p>
+</div>
+<div class="col-4 icon">
+    <p>Settings</p>
+</div>
+
