--- a/templates/partials/header.njk
+++ b/templates/partials/header.njk
@@ -1,4 +1,10 @@
 <!-- header.njk -->
-<header>
-    
-</header>
+<div class="container">
+    <div class="row">
+        <div class="col-12">
+            <header>
+                Picky
+            </header>
+        </div>
+    </div>
+</div>
