--- a/templates/partials/header.njk
+++ b/templates/partials/header.njk
@@ -3,7 +3,12 @@
     <div class="row">
         <div class="col-12">
             <header>
-                Picky
+               <center>
+                  <a target="banner" href="index.html" >
+                    <img src="../../content/img/picky_logo_black1x.svg"
+                    border="0" alt="Banner">
+                  </a>
+               </center>
             </header>
         </div>
     </div>
