--- a/scss/structure/_footer.scss
+++ b/scss/structure/_footer.scss
@@ -1,4 +1,11 @@
 .icon{
-    text-align: center;
+    text-align: left;
     padding: 30px;
+    display: inline;
+}
+
+footer {
+    width: 100%;
+    bottom: 0;
+    background-color: white;
 }
