--- a/templates/partials/footer.njk
+++ b/templates/partials/footer.njk
@@ -1,12 +1,18 @@
 <!-- footer.njk -->
 
-<div class="col-4 icon">
-    <p>Home</p>
-</div>
-<div class="col-4 icon">
-    <p>Previous Orders</p>
-</div>
-<div class="col-4 icon">
-    <p>Settings</p>
-</div>
+<footer>
+    <div class="col-12">
+        <div class="col-4 icon">
+            <div class="row" >
+                <p>Home</p>
+            </div>
+            <div class="row" >
+                <p>Previous Orders</p>
+            </div>
+            <div class="row" >
+                <p>Settings</p>
+            </div>
+        </div>
+    </div>
+</footer>
 
