Actually getting something mildly working

--- a/pages/index.njk
+++ b/pages/index.njk
@@ -4,23 +4,26 @@
 {% block content %}
 <div class="col-12">
 
+    <div id="user-set">
+        <div class="row">
+            <div class="col-6">
+                <button id="set-user-1">User 1</button>
+            </div>
+            <div class="col-6">
+                <button id="set-user-2">User 2</button>
+            </div>
+        </div>
+    </div>
+
     <div id="recommendations">
-        <button class="recommendation" id="recommendation1" data-value="1">
-            <h2>Recommendation 1</h2>
-        </button>
-        <button class="recommendation" id="recommendation2" data-value="2">
-            <h2>Recommendation 2</h2>
-        </button>
-        <button class="recommendation" id="recommendation3" data-value="3">
-            <h2>Recommendation 3</h2>
-        </button>
+        
     </div>
 
     <div id="restaurant">
-        <p>Restaurant</p>
+        
     </div>
 
-    <div id="restaurant-waiting">
+    <div id="waiting">
         <p>Waiting</p>
     </div>
 
