--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -6,4 +6,20 @@
         margin-bottom: 20px;
     }
  }
+
+ #restaurant{
+    display: none;
+ }
+
+ #waiting{
+    display: none;
+ }
+
+ #menu-choice {
+    display: none;
+ }
+
+ #menu-success{
+     display: none;
+ }
  
