--- a/templates/partials/footer.njk
+++ b/templates/partials/footer.njk
@@ -1,18 +1,28 @@
 <!-- footer.njk -->
 
-<footer>
-    <div class="col-12">
+<div class="col-12">
+    <div class="footer row">
         <div class="col-4 icon">
             <div class="row" >
+            <div class="col-12">
                 <p>Home</p>
             </div>
-            <div class="row" >
-                <p>Previous Orders</p>
             </div>
+        </div>
+        <div class="col-4 icon">
             <div class="row" >
+            <div class="col-12">
+                <p>Previous Orders</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-4 icon">
+            <div class="row" >
+            <div class="col-12">
                 <p>Settings</p>
+                </div>
             </div>
         </div>
     </div>
-</footer>
+</div>
 
