--- a/scss/structure/_footer.scss
+++ b/scss/structure/_footer.scss
@@ -1,10 +1,15 @@
 .icon{
-    text-align: left;
+    text-align: center;
     padding: 30px;
     display: inline;
+    margin: 0 auto;
+
+    &:not(:last-child){
+        border-right: 2px solid $light-grey;
+    }
 }
 
-footer {
+.footer {
     width: 100%;
     bottom: 0;
     background-color: white;
