Adding in the menu page

--- a/pages/index.njk
+++ b/pages/index.njk
@@ -24,7 +24,7 @@
     </div>
 
     <div id="waiting">
-        <p>Waiting</p>
+        <img src="/content/img/ajax-loader.gif" class='waiting-icon'>
     </div>
 
     <div id="menu-choice">
