--- a/scss/structure/_header.scss
+++ b/scss/structure/_header.scss
@@ -1,14 +1,15 @@
 header {
     width: 100%;
     color: $white;
-    height: 160px
-}
-
-
-img {
-    display: block;
-    float: left;
-    padding-bottom: 10px;
-    padding-top: 10px;
     height: 160px;
+
+    img {
+        display: block;
+        float: left;
+        padding-bottom: 10px;
+        padding-top: 10px;
+        height: 160px;
+    }    
 }
+
+
