--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -17,6 +17,12 @@
 
  #waiting{
     display: none;
+
+    img{
+        display: block;
+        margin: 0 auto;
+        height: 50px;
+    }
  }
 
  #menu-choice {
