--- a/pages/index.njk
+++ b/pages/index.njk
@@ -2,7 +2,7 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-<div class="col-12">
+<div class="col-12 content">
 
     <div id="user-set">
         <div class="row">
