--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -18,8 +18,8 @@
     </script>
   </head>
   <body>
-  <div id="preview">
-    <div class="container">
+  
+    <div class="container preview">
       <div class="row">
         {% include "partials/header.njk" %}
       </div>
@@ -36,7 +36,6 @@
       <div class="row">
         {% include "partials/footer.njk" %}
       </div>
-    </div>
     </div>
 
 
