--- a/scss/structure/_layout.scss
+++ b/scss/structure/_layout.scss
@@ -10,7 +10,7 @@
 }
 
 /* Add some padding inside the card container */
-.container {
+.card .container {
   padding: 2px 16px 10px 10px;
 
   button {
