--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -26,7 +26,7 @@
   <body>
   
     <div class="container preview">
-      <div class="row">
+      <div class="row header-row">
         {% include "partials/header.njk" %}
       </div>
       
