--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -8,6 +8,68 @@
 
  #restaurant{
     display: none;
+
+    .products{
+        border-top: 1px solid grey;
+
+        .product{
+            padding: 15px 0;
+            border-bottom: 1px solid grey;
+
+            h3,p{
+                display: inline;
+            }
+
+            h3{
+                font-size: 1.2em;
+            }
+
+            img{
+                height: 40px;
+                margin-right: 10px;
+
+                &.swap{
+                    float: right;
+                    margin-left: 20px;
+                }
+            }
+        }
+    }
+
+    .total-container{
+        padding: 15px 0;
+        p{
+            display: inline;
+
+            &.price{
+                font-size: 3.5em;
+                font-weight: 200;
+            }
+
+            &:first-child{
+                text-transform: uppercase;
+                font-weight: bold;
+                font-size: 2.5em;
+                font-weight: 600;
+            }
+        }
+    }
+
+    .price{
+        float: right;
+    }
+
+    .checkout{
+        button{
+            width: 100%;
+            margin-top: 15px;
+            background-color: rgb(69, 117, 176);
+            border: none;
+            font-size: 1.5em;
+            font-weight: 200;
+        }
+    }
+    
  }
 
  #waiting{
@@ -27,4 +89,5 @@
  #menu-success{
      display: none;
  }
+
  
