--- a/scss/structure/_header.scss
+++ b/scss/structure/_header.scss
@@ -1,8 +1,8 @@
 .header-row{
     background-color: white;
-    position: relative;
+    position: fixed;
     border-bottom: 1px solid grey;
-    
+
     .header {
         text-align: center;
         color: $white;
