--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -27,11 +27,11 @@
   <body>
   
     <div class="container preview">
-      <div class="row header-row">
+      <div class="row header-row fixed-top">
         {% include "partials/header.njk" %}
       </div>
       
-      <div class="row">
+      <div class="row content">
         <div class="container">
           <div class="row">
             {% block content %} {% endblock %}
