--- a/scss/structure/_layout.scss
+++ b/scss/structure/_layout.scss
@@ -6,21 +6,40 @@ body{
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-}
 
-/* On mouse-over, add a deeper shadow */
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-/* Add some padding inside the card container */
-.card .container {
-  padding: 10px 16px 10px 10px;
-
-  button {
-    float: right;
+  &:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
   }
 
+  .container-fluid{
+    padding: 10px 16px 10px 10px;
+
+    .source{
+      height: 20px;
+    }
+
+    .restaurantInfo{
+      padding-left: 0;
+    }
+
+    p{
+      margin-bottom:0;
+    }
+
+    button {
+      float: right;
+    }
+  }
+}
+
+.addPadding{
+  padding-left: 15px !important;
+  padding-right: 15px !important;
+}
+
+.col-12{
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .row {
