--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -26,13 +26,13 @@
   </head>
   <body>
   
-    <div class="container preview">
+    <div class="container-fluid preview">
       <div class="row header-row fixed-top">
         {% include "partials/header.njk" %}
       </div>
       
       <div class="row content">
-        <div class="container">
+        <div class="container-fluid">
           <div class="row">
             {% block content %} {% endblock %}
           </div>
