--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -21,22 +21,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="/content/js/site.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
     </script>
   </head>
   <body>
   
-    <div class="container-fluid preview">
-      <div class="row header-row fixed-top">
+    <div class="container">
+      <div class="row">
         {% include "partials/header.njk" %}
       </div>
       
-      <div class="row content">
-        <div class="container-fluid">
-          <div class="row">
+      <div class="row">
             {% block content %} {% endblock %}
-          </div>
-        </div>
       </div>
     </div>
   </body>
