--- a/pages/index.njk
+++ b/pages/index.njk
@@ -1,5 +1,15 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-
+<form name="contact" method="POST" netlify>
+  <p>
+    <label>Your Name: <input type="text" name="name" /></label>   
+  </p>
+  <p>
+    <label>Your Email: <input type="email" name="email" /></label>
+  </p>
+  <p>
+    <button type="submit">Send</button>
+  </p>
+</form>
 {% endblock %}
