--- a/templates/layout.njk
+++ b/templates/layout.njk
@@ -14,25 +14,44 @@
     
     <title>Picky</title>
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/lib.css">
     <link rel="stylesheet" href="css/site.css">
-
+    
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="/content/js/site.js"></script>
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script type="text/javascript" src="content/js/slick.min.js"></script>
     </script>
   </head>
   <body>
   
-    <div class="container">
+    <div class="container preview">
       <div class="row">
         {% include "partials/header.njk" %}
       </div>
-      
-      <div class="row">
-            {% block content %} {% endblock %}
-      </div>
+
+      {% block content %} {% endblock %}
+     
     </div>
+
+    <script>
+     $('.slick-main').slick({
+      slidesToShow: 1,
+      slidesToScroll: 1,
+      arrows: false,
+      fade: true,
+      asNavFor: '.slick-nav'
+    });
+    $('.slick-nav').slick({
+      slidesToShow: 3,
+      slidesToScroll: 1,
+      asNavFor: '.slick-main',
+      dots: true,
+      centerMode: true,
+      focusOnSelect: true
+    });
+    </script
   </body>
 </html>
