--- a/templates/partials/header.njk
+++ b/templates/partials/header.njk
@@ -1,10 +1,9 @@
 <!-- header.njk -->
-<div class="container">
-    <div class="header row">
-        
-    </div>
+<div class="col-2 center">
+    <header>
+        <img src="/content/img/picky_logo_black1x.svg" class="img-fluid">
+    </header>
 </div>
-
 
 
 
